Added dependency checking code to SortPathways.{h, cu}. Added call to to it and sortPathways in EFMGenerator.cu. Compiles, needs debugging.

--- a/todo.txt
+++ b/todo.txt
@@ -7,5 +7,5 @@ Ehsan
   updating coefficients and bin vectors
 
 Diogenes
-  Dependecy (with params for batch size, batch iteration)
+  X Dependecy (with params for batch size, batch iteration)
   update sorting & dependecy once circular buffs are implemented
